# EGL3_examples

./: CMakeLists.txt  README.md
.cache/clangd/index/: egl_utils.c.3441BEBF842A8E76.idx  egl_utils.h.CED8A6E8C6624E77.idx  main.c.0138747B05738E64.idx
android/app/: build.gradle
android/app/src/main/jni/: Android.mk  egl_setup.h  main.c  main_two.c
android/app/src/main/res/values/: styles.xml
android/app/src/test/java/com/izak/game/: ExampleUnitTest.java
app/src/androidTest/java/com/izak/game/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/izak/game/: MainActivity.java
app/src/main/jni/: Android.mk  egl_setup.c  egl_setup.h  main.c  util.h
gradle/wrapper/: gradle-wrapper.properties
include/: egl_utils.h  es_utils.h  hello_triangle.h  utils.h
src/: egl_utils.c  es_utils.c  es_utils.c~  hello_triangle.c  hello_triangle.c~  x11_main.c
